solved overflow issues on responsive

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   overflow:auto;
   max-width: 100%;
 }
+@media (max-width: 607px) {
+  .App{
+    overflow: hidden;
+  }
+}
